[package]
name = "sqlast"
version = "0.2.0"
authors = ["Mobikit <mobikit.io>"]
edition = "2018"
description = "SQL parsing and composing"
license     = "none"

[dependencies]
sqlparser = { version = "0.6.1", features = ["serde"] }
serde_json = { version = "1.0"}

[package.metadata.rpm]
package = "sqlast"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sqlast = { path = "/usr/bin/sqlast" }
